# csvtoxml

./: .gitignore  README.md  clean_dialogue_031.py  convert_031radio.py  convert_032radio.py  convert_033radio.py  convert_034radio.py  convert_037radio.py  convert_sp_radio.py  convert_whisper_031.py  csvtoxml.command  csvtoxml_gui.py  gas.js  llms.txt  merge_dialogue_031.py  pyproject.toml  test_file_matching.py  test_multifile.py
031radio/: 031_1.csv  031_1_dialogue.csv  031_1_dialogue_clean.csv  031_1_dialogue_raw.csv  031_1_editing.xml  031_1_whisper.csv  031_1_whisper_editing.xml  031_2.csv  031_2_dialogue.csv  031_2_dialogue_clean.csv  031_2_dialogue_raw.csv  031_2_editing.xml  031_2_whisper.csv  031_2_whisper_editing.xml  031_オリジナル1.xml  031_オリジナル2.xml  A_00002_Wireless_PRO.json  A_00003_Wireless_PRO.json
032radio/: 32_1_editing.xml  32_2_editing.xml  32オリジナル_1.xml  32オリジナル_2.xml
033radio/: 00078_Amic.csv  00079_Amic.csv  00095_Bmic.csv  00096_Bmic.csv  33_1.csv  33_1.xml  33_1_.csv  33_1__editing.xml  33_2.csv  33_2.xml  33_2_.csv  33_2__editing.xml
034radio/: 00075_Amic.csv  00076_Amic.csv  00092_Bmic.csv  00093_Bmic.csv  34_1.csv  34_1.xml  34_1_.csv  34_1__editing.xml  34_2.csv  34_2.xml  34_2_.csv  34_2__editing.xml
035radio/: 00081_Amic.csv  00082_Amic.csv  00098_Bmic2.csv  00099_Bmic2.csv  35_1.csv  35_1.xml  35_1_.csv  35_1__editing.xml  35_1_edit.csv  35_1_荒編後.csv  35_1_荒編後_editing.xml  35_2.csv  35_2.xml  35_2_.csv  35_2__editing.xml  35_2_edit.csv  35_2_荒編後.csv  35_2_荒編後_editing.xml
036radio/: 00084_Amic.wav.csv  00085_Amic.wav.csv  036_1.csv  (+19 more)
(+112 files in other folders)
