[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvtoxml"
version = "0.1.0"
description = "CSV to NLE Timeline XML converter (Premiere Pro / DaVinci Resolve)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DELAxGithub" }
]
keywords = ["video", "editing", "premiere", "davinci", "timeline", "xml", "csv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

[project.scripts]
csvtoxml = "csvtoxml.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/csvtoxml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
